compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__unused_function_visitor__test__unused_function_snapshot_tests@events_are_roots.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/unused_function_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/unused_function/events_are_roots.tapir
---
# @toplevel: {"FunctionId(0)"}


# {"FunctionId(1)"}
event fn foo() {
    call_function(); # {"FunctionId(2)"}
}

# {"FunctionId(2)"}
fn call_function() {
    wait;
}

# {"FunctionId(3)", "UnusedFunction"}
fn unused_function() {
}
