compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__unused_function_visitor__test__unused_function_snapshot_tests@function_used_in_binary_operation.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/unused_function_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/unused_function/function_used_in_binary_operation.tapir
---
# @toplevel: {"FunctionId(0)"}

var x = (foo(5,) + 5); # {"SymbolId(0)"}

# {"FunctionId(1)"}
fn foo(int,) -> (int,) {
    wait;
    return (5,);
}
