compiler/src/compile/optimisations/snapshots/compiler__compile__optimisations__unused_function_visitor__test__unused_function_snapshot_tests@spawn_counts_as_using.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/optimisations/unused_function_visitor.rs
expression: pretty_printed
input_file: crates/tapir-script/compiler/src/compile/optimisations/snapshot_tests/unused_function/spawn_counts_as_using.tapir
---
# @toplevel: {"FunctionId(0)"}

# {"FunctionId(1)"}
spawn foo();

# {"FunctionId(1)"}
fn foo() {
    wait;
}
